--- a/estilo.css
+++ b/estilo.css
@@ -1,22 +1,7 @@
-#fecha{
-    margin-top: 2%;
-    margin-left: 20%;
-    margin-right: 20%;
-    background: white;
-    color: black;
-    text-align: center;
-    border: black solid 2px;
-    font-size: 20pt;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    border-radius: 1%;
-}
 body{
-    background: wheat;
+    background: rgb(11, 12, 3);
 }
 h1{
     text-align: center;
-    color: green;
+    color: rgb(70, 2, 255);
 }
